[package]
name = "basepure"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
alloy = { version = "0.15.0", default-features = false, features = [
    "full",
    "reqwest-rustls-tls",
], optional = true }
async-stream = "0.3"
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_json = "1"
tokio = "1"
tracing = { version = "0.1.37", features = ["log"] }
thiserror = "1.0.60"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }


[features]
default = ["eth"]

#eth
eth = ["alloy"]
